hphp/hack/test/typecheck/pending_trycatch7.php.exp
File "pending_trycatch7.php", line 24, characters 10-11:
Variable $x is undefined, or not always defined (Naming[2050])
